appId: dev.ipf.whitenoise.android.maestrolab
name: consent-usage-details
---
- runFlow: ../fixtures/emulator-interruption.yaml
- assertVisible: "Help Improve White Noise"
- assertVisible: "Share usage"
- assertVisible: "Share diagnostic logs"
- tapOn: "Share usage, Details"
- assertVisible: "Shares how often features are used.*"
- tapOn: "Share usage, Hide details"
- assertNotVisible: "Shares how often features are used.*"
- assertVisible: "Share diagnostic logs, Details"
