appId: dev.ipf.whitenoise.android.maestrolab
name: creation-group-back
---
- runFlow: ../fixtures/runtime-ready.yaml
- assertVisible: "Maestro group"
- tapOn: "New Message"
- assertVisible:
    id: "new_message.screen"
- tapOn: "New Group"
- assertVisible:
    id: "new_group.screen"
- back
- assertVisible:
    id: "new_message.screen"
