appId: dev.ipf.whitenoise.android.maestrolab
name: groups-notifications-back
---
- runFlow: ../fixtures/runtime-ready.yaml
- assertVisible: "Maestro group"
- tapOn: "Maestro group"
- runFlow: ../fixtures/assert-fixture-conversation.yaml
- tapOn: "Maestro group"
- assertVisible:
    id: "chat_info.list"
- scrollUntilVisible:
    element:
      text: "Sounds & notifications"
    direction: DOWN
- tapOn: "Sounds & notifications"
- assertVisible: "Sounds & notifications"
- back
- assertVisible:
    id: "chat_info.list"
